2019-08-13:
    Initial Release
2019-10-23:
    Updates to rasterpy image to include python bindings, specifically `gdal_merge.py`
2022-06-29:
    Updates to chop netCDF file with selected start_year.